# ceia-amq1-tf

./: .gitignore  LICENSE  README.md  eda.ipynb  eda_andy.ipynb  main.py  pyproject.toml
notebooks/: baseline_classifier.ipynb  dataframe_gen.ipynb  eda.ipynb  svm_classifier.ipynb
